Adopted getFirst() over get(0), reformatted a builder chain, and recorded style conventions
Switched List.get(0) to getFirst() across the Java sources, put the Debt builder chain one call
per line, and captured the session's style decisions in project memory (fluent chains one-per-line,
member ordering by visibility, Hamcrest-only assertions matching oppshan-files, getFirst usage).